--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,14 +1,13 @@
 [tool.poetry]
-name = "fastapi"
+name = "Hexagonal fastApi"
 version = "0.1.0"
 description = "Test FastApi with hexagonal architecture"
 authors = ["Desireé Torrente Ramírez <dt@certainly.io>"]
 
 [tool.poetry.dependencies]
-python = "3.10"
+python = "^3.10"
 fastapi = "^0.79.1"
-
-[tool.poetry.dev-dependencies]
+uvicorn = {extras = ["standard"], version = "^0.18.2"}
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
